--- a/busstops/static/css/_62em.scss
+++ b/busstops/static/css/_62em.scss
@@ -24,7 +24,6 @@ main {
         }
     }
 
-    #cookie-message,
     main {
         max-width: 60.5em;
     }
