--- a/busstops/static/css/_base.scss
+++ b/busstops/static/css/_base.scss
@@ -32,8 +32,15 @@ footer {
 
 #cookie-message {
     display: none;
+    background: #fff;
+    box-shadow: #ccc 0 0 1em;
+    bottom: 0;
+    left: 0;
     margin: 0 auto;
     padding: 1em;
+    position: fixed;
+    right: 0;
+    z-index: 2;
 
     p {
         margin: 0 0 1em;
